# chainlist-editor

./: .coveragerc  .env  .env.sample  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/chainlist_editor/: __init__.py  logo-add.py  skeleton.py
tests/: conftest.py  test_skeleton.py
