[tool.poetry]
name = "chainlist-editor"
version = "0.1.0"
description = ""
authors = ["Ertemann <gijs@lavenderfive.com>"]
readme = "README.md"
packages = [{include = "chainlist_editor"}]

[tool.poetry.dependencies]
python = "^3.11"
retry = "^0.9.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
